--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,14 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>zookeeper</module>
+        <module>activemq</module>
     </modules>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-core -->
         <dependency>
             <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-core</artifactId>
-            <version>5.1.0</version>
+            <artifactId>activemq-all</artifactId>
+            <version>5.13.5</version>
         </dependency>
 
     </dependencies>
