--- a/activemq/pom.xml
+++ b/activemq/pom.xml
@@ -8,12 +8,46 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>activemq</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>delayOrder</module>
     </modules>
-
-
+   <!-- <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    &lt;!&ndash; 源码版本 &ndash;&gt;
+                    <source>1.8</source>
+                    &lt;!&ndash; 编译版本 &ndash;&gt;
+                    <target>1.8</target>
+                    &lt;!&ndash; 指定编码 &ndash;&gt;
+                    <encoding>utf-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                &lt;!&ndash; 新增配置 &ndash;&gt;
+                <configuration>
+                    <port>9090</port>
+                    &lt;!&ndash; 项目路径 &ndash;&gt;
+                    <path>/</path>
+                    &lt;!&ndash; 编码 &ndash;&gt;
+                    <uriEncoding>utf-8</uriEncoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>-->
 </project>
