--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>zookeeper</module>
         <module>activemq</module>
         <module>rocketmq</module>
+        <module>kafka</module>
     </modules>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-core -->
@@ -51,6 +52,13 @@
                 <groupId>org.apache.rocketmq</groupId>
                 <artifactId>rocketmq-client</artifactId>
                 <version>4.4.0</version>
+            </dependency>
+            <!--kafka-->
+            <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-clients</artifactId>
+                <version>2.2.1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
