--- a/activemq/delayOrder/pom.xml
+++ b/activemq/delayOrder/pom.xml
@@ -19,6 +19,15 @@
                 <includes>
                     <include>**/*.xml</include>
                 </includes>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>${basedir}/src/main/resources</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                    <include>**/*.properties</include>
+                </includes>
+                <filtering>false</filtering>
             </resource>
         </resources>
         <plugins>
@@ -43,7 +52,7 @@
                 <configuration>
                     <port>9090</port>
                     <!-- 项目路径 -->
-                    <path>/</path>
+                    <path>/delayOrder</path>
                     <!-- 编码 -->
                     <uriEncoding>utf-8</uriEncoding>
                 </configuration>
@@ -128,6 +137,16 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
             <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.3</version>
         </dependency>
     </dependencies>
 </project>
