--- a/activemq/pom.xml
+++ b/activemq/pom.xml
@@ -13,6 +13,15 @@
     <modules>
         <module>delayOrder</module>
     </modules>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-core -->
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>5.13.5</version>
+        </dependency>
+
+    </dependencies>
    <!-- <build>
         <plugins>
             <plugin>
