--- a/dubbo/sotrePotal/pom.xml
+++ b/dubbo/sotrePotal/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>sotrePotal</artifactId>
-
+    <packaging>war</packaging>
     <dependencies>
         <dependency>
             <groupId>com.wj</groupId>
