--- a/dubbo/storeServer/pom.xml
+++ b/dubbo/storeServer/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>storeServer</artifactId>
-
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>com.wj</groupId>
