--- a/dubbo/storeServer/src/main/resources/dubbo.properties
+++ b/dubbo/storeServer/src/main/resources/dubbo.properties
@@ -1,5 +1,5 @@
 # 应用名
-dubbo.application.name=storeServer_properties
+dubbo.application.name=storeServer
 # 注册中心地址
 dubbo.registry.address=zookeeper://10.0.0.141:2181
 # 调用协议地址
