--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
                 <version>2.5</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.9.6</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
