--- a/dubbo/storeSpi/pom.xml
+++ b/dubbo/storeSpi/pom.xml
@@ -3,23 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>component</artifactId>
+        <artifactId>dubbo</artifactId>
         <groupId>com.wj</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dubbo</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>storePotal</module>
-        <module>storeapi</module>
-        <module>storeServerApi</module>
-        <module>storeServer</module>
-        <module>springboot</module>
-        <module>storeSpi</module>
-    </modules>
+    <artifactId>storeSpi</artifactId>
 
-
-
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+        </dependency>
+    </dependencies>
 </project>
