--- a/dubbo/storePotal/pom.xml
+++ b/dubbo/storePotal/pom.xml
@@ -14,6 +14,11 @@
     <dependencies>
         <dependency>
             <groupId>com.wj</groupId>
+            <artifactId>storeSpi</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.wj</groupId>
             <artifactId>storeapi</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
