--- a/dubbo/storePotal/src/main/resources/log4j.properties
+++ b/dubbo/storePotal/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 # priority  :debug<info<warn<error
 #you cannot specify every priority with different file for log4j
 #log4j.rootLogger=debug,stdout,info,debug,warn,error
-log4j.rootLogger=stdout,error 
+log4j.rootLogger=stdout,debug 
 #console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender 
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout 
