--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,7 +1,24 @@
 spring.datasource.password=root
 spring.datasource.username=root
 #springboot2,设置数据库的URL地址时，必须执行时区
-spring.datasource.url=jdbc:mysql://127.0.0.1:3307/spring?serverTimezone=GMT%2B8  
+spring.datasource.url=jdbc:mysql://127.0.0.1:3307/spring?serverTimezone=GMT%2B8&useSSL=false
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 #配置mapper
-mybatis.mapperLocation=classpath:mapping/*.xml
+mybatis.mapperLocations=classpath:mapping/*.xml
+
+#系统设置
+#server.port=8090
+#server.servlet.context-path=/wj
+
+#配置视图解析器（jsp相关配置）
+#spring.mvc.view.prefix=/jsp/
+#ring.mvc.view.prefix=/WEB-INF/jsp/
+#spring.mvc.view.suffix=.jsp
+#配置日志级别
+logging.level.root=INFO
+logging.level.com.wj.controller=DEBUG
+
+#日志文件
+#logging.path = 在路径下面创建spring.log文件
+#logging.file   设置路径下面创建文件  两个配置同时配置，logging.file生效，logging.path是不生效的，建议这个
+logging.file=F:/my.log
