--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -22,3 +22,14 @@ logging.level.com.wj.controller=DEBUG
 #logging.path = 在路径下面创建spring.log文件
 #logging.file   设置路径下面创建文件  两个配置同时配置，logging.file生效，logging.path是不生效的，建议这个
 logging.file=F:/my.log
+
+#使用热加载后，如果想要使用thymeleaf，需要关闭这个  如果使用eclipse 只需要引入热加载的包+下列配置即可
+#idea需要单独设置一个插件 pom.xml
+spring.thymeleaf.cache=false 
+
+##配置Redis
+spring.redis.host=10.0.0.141
+spring.redis.port=6379
+spring.redis.database=0
+spring.redis.password=
+spring.redis.timeout=5000
