--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -33,3 +33,13 @@ spring.redis.port=6379
 spring.redis.database=0
 spring.redis.password=
 spring.redis.timeout=5000
+
+#配置数据源连接池
+spring.datasource.spring2.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.spring2.jdbcUrl=jdbc:mysql://127.0.0.1:3307/spring?serverTimezone=GMT%2B8&useSSL=false
+spring.datasource.spring2.username=root
+spring.datasource.spring2.password=root
+spring.datasource.spring.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.spring.jdbcUrl=jdbc:mysql://127.0.0.1:3307/spring?serverTimezone=GMT%2B8&useSSL=false
+spring.datasource.spring.username=root
+spring.datasource.spring.password=root
