--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>kafka</module>
         <module>dubbo</module>
         <module>springboot</module>
+        <module>springcloud</module>
     </modules>
     <properties>
         <springframework.version>5.0.9.RELEASE</springframework.version>
