--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://127.0.0.1:3307/spring?serverTimezone=GMT%2B8&useSSL=false
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 #配置mapper
-mybatis.mapperLocations=classpath:mapping/*.xml
+#mybatis.mapperLocations=classpath:mapping/*.xml
 
 #系统设置
 #server.port=8090
@@ -36,7 +36,7 @@ spring.redis.timeout=5000
 
 #配置数据源连接池
 spring.datasource.spring2.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.spring2.jdbcUrl=jdbc:mysql://127.0.0.1:3307/spring?serverTimezone=GMT%2B8&useSSL=false
+spring.datasource.spring2.jdbcUrl=jdbc:mysql://127.0.0.1:3307/spring2?serverTimezone=GMT%2B8&useSSL=false
 spring.datasource.spring2.username=root
 spring.datasource.spring2.password=root
 spring.datasource.spring.driverClassName=com.mysql.jdbc.Driver
