--- a/springcloud/pom.xml
+++ b/springcloud/pom.xml
@@ -10,7 +10,20 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>cloud-api</module>
+        <module>cloud-provider</module>
+        <module>cloud-provider2</module>
+        <module>cloud-provider3</module>
+        <module>cloud-consumer</module>
+        <module>cloud-security</module>
+        <module>cloud-eureka</module>
+        <module>cloud-eureka2</module>
+        <module>cloud-eureka3</module>
     </modules>
+
+    <properties>
+        <jdk.version>1.8</jdk.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencyManagement>
         <dependencies>
@@ -41,6 +54,34 @@
         </dependencies>
     </dependencyManagement>
 
+    <build>
+        <finalName>springcloud</finalName>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <delimiters>
+                        <delimiter>$</delimiter>
+                    </delimiters>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${jdk.version}</source><!-- 源代码使用的开发版本 -->
+                    <target>${jdk.version}</target><!-- 需要生成的目标class文件的编译版本 -->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
