--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -32,6 +32,13 @@
             <artifactId>javax.inject</artifactId>
             <version>1</version>
         </dependency>
+
+        <!--aop使用-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>5.0.9.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
