--- a/rabbitmq/pom.xml
+++ b/rabbitmq/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.wj</groupId>
     <artifactId>rabbitmq</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>spring</module>
+    </modules>
 
 
     <dependencies>
@@ -18,6 +22,8 @@
             <artifactId>amqp-client</artifactId>
             <version>5.7.3</version>
         </dependency>
+
+
     </dependencies>
 
 
