--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -15,6 +15,7 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
+            <version>1.1.0</version>
         </dependency>
     </dependencies>
 
